<button> ignores margin-bottom. https://bugs.webkit.org/show_bug.cgi?id=114940

Reviewed by Beth Dakin.

Source/WebCore:

Make sure that the inner block inside the <button> (flexbox) acts like it
establishes a block formatting context, i.e., it should refuse to collapse
its margins with its children. This causes margins to stay inside the <button>
and be honored, adding to the button's overall height.

Basically we have to remove the restriction that anonymous blocks can't be
BFCs on the bottom margin.

Added fast/forms/content-with-margins-inside-button.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::handleAfterSideOfBlock):

LayoutTests:

* fast/forms/content-with-margins-inside-button-expected.html: Added.
* fast/forms/content-with-margins-inside-button.html: Added.



Canonical link: https://commits.webkit.org/133890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149407 268f45cc-cd09-0410-ab3c-d52691b4dbfc